--- a/login.html
+++ b/login.html
@@ -22,28 +22,21 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h1 class="logo-name">LZ+</h1>
 
             </div>
-            <h3>Welcome to IN+</h3>
-            <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-                <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
-            </p>
-            <p>Login in. To see it in action.</p>
+            <h3>小程序管理登陆</h3>
+            <p>如果您忘记了用户名密码,请联系客服人员</p>
             <form class="m-t" role="form" action="index.html">
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Username" required="">
+                    <input type="text" class="form-control" placeholder="请输入用户名" name="username" required="">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="">
+                    <input type="password" class="form-control" placeholder="请输入密码" name="password" required="">
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
-
-                <a href="login.html#"><small>Forgot password?</small></a>
-                <p class="text-muted text-center"><small>Do not have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+                <button type="submit" class="btn btn-primary block full-width m-b">登陆</button>
             </form>
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>黄山龙珠网络科技有限公司 &copy; 2017</small> </p>
         </div>
     </div>
 
