--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>商品管理</title>
+    <title>案例管理</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -93,19 +93,22 @@
             </nav>
         </div>
         <div class="row wrapper border-bottom white-bg page-heading">
-            <div class="col-lg-10">
-                <h2>商品管理</h2>
+            <div class="col-lg-8">
+                <h2>案例管理</h2>
                 <ol class="breadcrumb">
                     <li>
                         <a href="index.html">控制台</a>
                     </li>
                     <li class="active">
-                        <strong>商品列表</strong>
+                        <strong>案例列表</strong>
                     </li>
                 </ol>
             </div>
-            <div class="col-lg-2">
-
+            <div class="col-lg-4">
+               <h2>
+                   <a href="#" class="btn btn-info"><i class="fa fa-pencil"></i> 管理分类</a>
+                   <a href="#" class="btn btn-success"><i class="fa fa-plus-square"></i> 添加案例</a>
+               </h2>
             </div>
         </div>
 
