--- a/product_edit.html
+++ b/product_edit.html
@@ -121,9 +121,35 @@
                         </div>
                         <div class="ibox-content">
                             <form method="get" class="form-horizontal">
-                                <div class="form-group"><label class="col-sm-2 control-label">* 案例名称</label>
-
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">* 案例名称</label>
                                     <div class="col-sm-5"><input type="text" class="form-control"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">* 分类</label>
+                                    <div class="col-sm-3">
+                                        <select name="case_class" class="form-control">
+                                            <option value="0">-- 请选择分类 --</option>
+                                            <option value="1">现代</option>
+                                            <option value="2">北欧</option>
+                                            <option value="3">中式</option>
+                                            <option value="4">美式</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">* 风格</label>
+                                    <div class="col-sm-3"><input type="text" class="form-control"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">* 面积</label>
+                                    <div class="col-sm-3">
+                                        <div class="input-group m-b"><input type="text" class="form-control"> <span class="input-group-addon">㎡</span></div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">* 户型</label>
+                                    <div class="col-sm-3"><input type="text" class="form-control"></div>
                                 </div>
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group"><label class="col-sm-2 control-label">* 缩略图</label>
